test/functions/jplevyak/introduce-dispatch-1.good
introduce-dispatch-1.chpl:5: error: type mismatch in assignment from C(real(64)) to C(int(64))
